# qt6_tv_tuner

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
assets/: tv_tuner_gui.desktop.in
include/: DisplayTheme.h  MainWindow.h  TvGuideDialog.h
src/: DisplayTheme.cpp  MainWindow.cpp  TvGuideDialog.cpp  main.cpp
